--- a/src/main/java/serveasestart/ModifyOrderScreen.form
+++ b/src/main/java/serveasestart/ModifyOrderScreen.form
@@ -160,6 +160,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Payment"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PayBtActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="AddBt">
       <Properties>
